pracaInz/force-app/main/default/objects/Account/fields/KRS__c.field-meta.xml
<CustomField>
    <fullName>KRS__c</fullName>
    <label>KRS</label>
    <length>10</length>
    <type>Text</type>
</CustomField>