pracaInz/force-app/main/default/objects/Account/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <inlineHelpText>Typ działalności</inlineHelpText>
    <label>Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spółka Z.O.O</fullName>
            </value>
            <value>
                <fullName>Jednoosobowa działalność gospodarcza</fullName>
            </value>
            <value>
                <fullName>Spółka cywilna</fullName>
            </value>
            <value>
                <fullName>Spółka jawna,</fullName>
            </value>
            <value>
                <fullName>Spółka partnerska</fullName>
            </value>
            <value>
                <fullName>Spółka komandytowa</fullName>
            </value>
            <value>
                <fullName>Spółka komandytowo-akcyjna,</fullName>
            </value>
            <value>
                <fullName>spółka z ograniczoną odpowiedzialnością,</fullName>
            </value>
            <value>
                <fullName>spółka akcyjna.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>