pracaInz/force-app/main/default/objects/Account/fields/Regon__c.field-meta.xml
<CustomField>
    <fullName>Regon__c</fullName>
    <label>Regon</label>
    <length>9</length>
    <type>Text</type>
</CustomField>