pracaInz/force-app/main/default/objects/Account/fields/Short_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Account_Name__c</fullName>
    <label>Short Account Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>